OO-4636, OO-4635: CSRF protection, open in new window
Implement a CSRF token to protect a little more against CSRF attack.
Enhance the UI framework to allow opening a link in a new browser
window.